syntax = "proto3";

package pb;

import "google/api/annotations.proto";

enum Protocol {
    Grpc = 0;
    Http = 1;
}

enum Type {
    UnknownType = 0;
    CA = 1;
    Auth = 2;
    Organization = 3;
    TokenDB = 4;
    UserDatabase = 5;
    FileStorage = 6;
    ServiceProvider = 7;
}

enum Security {
    None = 0;
    TLS = 1;
    MutualTLS = 2;
}

enum Status {
    UnknownStatus = 0;
    Running = 1;
    Stopped = 2;
}

enum EventType {
    UnknownEvent = 0;
    Registered = 1;
    DeRegistered = 2;
    Updated = 3;
}

message State {
    Status status = 1;
    map<string, string> metadata = 2;
}

message ConnectionInfo {
    Protocol protocol = 1;
    string address = 2;
    bytes Certificate = 3;
}

message Node {
    Protocol protocol = 1;
    string address = 2;
    Security security = 3;
    int64 ttl = 5;
}

message Info {
    string name = 1;
    string namespace = 2;
    Type type = 3;
    string label = 4;
    Node serviceNode = 5;
    Node gatewayNode = 6;
    map<string, string> meta = 7;
}

message Event {
    EventType type = 1;
    string name = 2;
    Info info = 3;
}

message RegisterRequest {
    Info service = 1;
}
message RegisterResponse {
    string registry_id = 1;
}

message DeregisterRequest {
    string registry_id = 1;
}
message DeregisterResponse {}

message ListRequest {
    string namespace = 1;
}
message ListResponse {
    repeated Info applications = 1;
}

message GetRequest {
    string registry_id = 1;
}
message GetResponse {
    Info info = 1;
}

message SearchRequest {
    string namespace = 1;
    Type type = 2;
}
message SearchResponse {
    repeated Info services = 1;
}

message ListenRequest {
    string namespace = 1;
}

service Registry {
    rpc Register(RegisterRequest) returns (RegisterResponse){
        option(google.api.http) = {
            post: "/service/register";
            body: "*";
        };
    };
    rpc Deregister(DeregisterRequest)returns(DeregisterResponse){
            option(google.api.http).get = "/service/deregister/{registry_id}";
    };
    rpc List(ListRequest)returns(ListResponse){
            option(google.api.http).get = "/service/list";
    };
    rpc Get(GetRequest)returns(GetResponse){
        option(google.api.http).get = "/service/get/{registry_id}";
    };
    rpc Search(SearchRequest) returns (SearchResponse) {
        option(google.api.http).get = "/service/search";
    };
    rpc Listen(ListenRequest) returns (stream Event);
}